--- a/tau/demos/SDK/wearable/UIComponents/css/style.css
+++ b/tau/demos/SDK/wearable/UIComponents/css/style.css
@@ -811,10 +811,10 @@ input[type="checkbox"]#checkboxControl {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(255, 0, 0, 1);
-	mask-image: url(../contents/popup/images/tw_ic_popup_btn_check.png);
+	mask-image: url(../css/images/b_settings_list_icon.png);
 	mask-position: center center;
 	mask-repeat: no-repeat;
-	-webkit-mask-image: url(../contents/popup/images/tw_ic_popup_btn_check.png);
+	-webkit-mask-image: url(../css/images/b_settings_list_icon.png);
 	-webkit-mask-position: center center;
 	-webkit-mask-repeat: no-repeat;
 }
