--- a/tau/src/css/profile/wearable/changeable/common/emptystate.less
+++ b/tau/src/css/profile/wearable/changeable/common/emptystate.less
@@ -44,6 +44,7 @@
 			.ui-title {
 				padding-top: 51 * @unit_base;
 			}
+			margin-top: 0;
 		}
 		.ui-content {
 			.ui-icon {
